updated home functionality

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="styles/style.css">
+        <link rel="stylesheet" href="styles/home.css">
         <script src="site.js" defer></script>
 
         <!-- connecting to font sources -->
@@ -34,12 +35,14 @@
         </nav>
         <div id="wrapper">
             <h1 id="title">Guac 'n Roll</h1>
-            <div class="body-text">
-                <p>Guac 'n Roll is not just a food truck; it's a flavorful journey through the vibrant world of Mexican cuisine. Our mission is to bring the authentic tastes of Mexico to your fingertips, one delicious dish at a time. From our signature guacamole made with ripe avocados and fresh ingredients to our mouthwatering tacos filled with savory meats and zesty salsas, every bite is a celebration of flavor.</p>
-                <p>At Guac 'n Roll, we believe in using high-quality, locally sourced ingredients to create dishes that are not only delicious but also sustainable. Our menu is designed to cater to every palate, whether you're craving traditional street tacos bursting with flavor or want to indulge in a hearty burrito loaded with all your favorite fillings.</p>
-                <p>But Guac 'n Roll is more than just great food; it's a mobile fiesta, bringing people together to share in the joy of good food and good company. So join us on this culinary adventure and let your taste buds dance to the rhythm of Guac 'n Roll!</p>
+            <div id="grid-container">
+                <div class="body-text">
+                    <p>Guac 'n Roll is not just a food truck; it's a flavorful journey through the vibrant world of Mexican cuisine. Our mission is to bring the authentic tastes of Mexico to your fingertips, one delicious dish at a time. From our signature guacamole made with ripe avocados and fresh ingredients to our mouthwatering tacos filled with savory meats and zesty salsas, every bite is a celebration of flavor.</p>
+                    <p>At Guac 'n Roll, we believe in using high-quality, locally sourced ingredients to create dishes that are not only delicious but also sustainable. Our menu is designed to cater to every palate, whether you're craving traditional street tacos bursting with flavor or want to indulge in a hearty burrito loaded with all your favorite fillings.</p>
+                    <p>But Guac 'n Roll is more than just great food; it's a mobile fiesta, bringing people together to share in the joy of good food and good company. So join us on this culinary adventure and let your taste buds dance to the rhythm of Guac 'n Roll!</p>
+                </div>
+                <img src="images/home1.jpg" alt="tacos" id="tacos">
             </div>
-            <img src="images/home1.jpg" alt="tacos" id="tacos">
             <div id="events">
                 <h2>Events</h2>
                 <div class="event-info">
