--- a/public/menu.html
+++ b/public/menu.html
@@ -2,7 +2,8 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="styles/style.css">
+        <link rel="stylesheet" href="styles/menu.css">
         <script src="site.js" defer></script>
 
         <!-- connecting to font sources -->
@@ -30,7 +31,12 @@
             </ul>
         </nav>
         <div id="wrapper">
-
+            <h1>Our Menu</h1>
+            <div id="grid-container">
+                <div class="menu-item">
+                    <h2>Guac 'n Roll Signature Guacamole</h2>
+                </div>
+            </div>
         </div>
     </body>
 </html>
