--- a/public/contact.html
+++ b/public/contact.html
@@ -2,7 +2,8 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="styles/style.css">
+        <link rel="stylesheet" href="styles/contact.css">
         <script src="site.js" defer></script>
 
         <!-- connecting to font sources -->
