--- a/public/contact.html
+++ b/public/contact.html
@@ -9,15 +9,20 @@
         <!-- connecting to font sources -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-
         <!-- title font -->
-        <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Sedgwick+Ave+Display&family=Shadows+Into+Light&display=swap" rel="stylesheet">
-        
+        <link
+            href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Sedgwick+Ave+Display&family=Shadows+Into+Light&display=swap"
+            rel="stylesheet">
+
         <!-- nav font -->
-        <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Sedgwick+Ave+Display&family=Shadows+Into+Light&display=swap" rel="stylesheet">
+        <link
+            href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Sedgwick+Ave+Display&family=Shadows+Into+Light&display=swap"
+            rel="stylesheet">
 
         <!-- body font -->
-        <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Sedgwick+Ave+Display&display=swap" rel="stylesheet">
+        <link
+            href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Sedgwick+Ave+Display&display=swap"
+            rel="stylesheet">
         <title>Guac 'n Roll</title>
     </head>
     <body>
@@ -31,7 +36,41 @@
             </ul>
         </nav>
         <div id="wrapper">
-
+            <h1>Contact Us</h1>
+            <p>
+                We'd love to hear from you! Whether you have questions about our
+                menu, want to book us for an event, or simply want to say hello,
+                feel free to reach out using the contact information below. You
+                can contact us via phone at (555) 123-4567 during our business
+                hours or send us an email at info@guacnroll.com. Our food truck
+                is always on the move, so be sure to follow us on social media
+                for updates on our locations and upcoming events. We look
+                forward to serving you delicious Mexican cuisine and spreading
+                the joy of Guac 'n Roll!
+            </p>
+            <form action="site.js" method="get" name="Contact Form">
+                <div id="grid-container">
+                    <div>
+                        <label for="fname">First name:</label>
+                        <input type="text" id="fname" name="fname">
+                    </div>
+                    <div>
+                        <label for="lname">Last name:</label>
+                        <input type="text" id="lname" name="lname">
+                    </div>
+                    <div>
+                        <label for="email">Email:</label>
+                        <input type="email" id="email" name="email">
+                    </div>
+                </div>
+                <label for="freeform" id="feedback">Let us know what you think about Guac 'n Roll' :</label>
+                <div id="text">
+                    <textarea id="freeform" name="freeform" rows="15" cols="50"></textarea>
+                </div>
+                <div id="submit">
+                    <button type="submit">Submit</button>
+                </div>
+            </form>
         </div>
     </body>
 </html>
