Started admin page development

--- a/public/admin.html
+++ b/public/admin.html
@@ -31,7 +31,38 @@
             </ul>
         </nav>
         <div id="wrapper">
-
+            <form>
+                <h3>
+                    <!--Menu Items Contain Fields: ID (auto), name, description, price-->
+                    Add Menu Items
+                </h3>
+            </form>
+            <form>
+                <h3>
+                    <!--Events Contain Fields: ID (auto), name, date (string)-->
+                    Add Events
+                </h3>
+            </form>
+            <form>
+                <h3>
+                    Update Menu Items    
+                </h3>
+            </form>
+            <form>
+                <h3>
+                    Update Events
+                </h3>
+            </form>
+            <form>
+                <h3>
+                    Delete Menu Items
+                </h3>
+            </form>
+            <form>
+                <h3>
+                    Delete Events
+                </h3>
+            </form>
         </div>
     </body>
 </html>
