feat: Add devDependencies for @types/node and update event form with time and location fields. I added hours and location to the routes as well. I couldnt get the admin forms working with it though

--- a/public/admin.html
+++ b/public/admin.html
@@ -61,15 +61,19 @@
                 <form action="" method="" id="add-new-event">
                     <input type="text" id="add-name" placeholder="Event Name">
                     <input type="text" id="add-date" placeholder="Event Date">
+                    <input type="text" id="add-time" placeholder="Event Time">
+                    <input type="text" id="add-location" placeholder="Event Location">
                     <button type="submit" id="add-event">Add Event</button>
                 </form>
             </div>
             <div>
                 <h3>Update Events</h3>
                 <form action="" method="" id="update-event">
-                    <input type="text" id="update-event-id" placeholder="Event ID">
+                    <input type="text" id="update-event-id" placeholder="Event ID"> 
                     <input type="text" id="update-name" placeholder="Event Name">
                     <input type="text" id="update-date" placeholder="Event Date">
+                    <input type="text" id="update-time" placeholder="Event Time">
+                    <input type="text" id="update-location" placeholder="Event Location">
                     <button type="submit" id="update-event-btn">Update Event</button>
                 </form>
             </div>
