Added more admin functionality

--- a/public/admin.html
+++ b/public/admin.html
@@ -49,10 +49,20 @@
             </div>
             <div>
                 <h3>Update Menu Items</h3>
-                
+                <form action="" method="" id="update-menu">
+                    <input type="text" id="update-item-id" placeholder="Item ID"> 
+                    <input type="text" id="update-item" placeholder="Item Name">
+                    <input type="text" id="update-description" placeholder="Item Description">
+                    <input type="text" id="update-price" placeholder="Item Price">
+                    <button type="submit" id="update-item-btn">Update Item</button>
+                </form>
             </div>
             <div>
                 <h3>Delete Menu Items</h3>
+                <form action="" method="" id="delete-item">
+                    <input type="text" id="delete-item-id" placeholder="Item ID">
+                    <button type="submit" id="delete-item-btn">Delete Item</button>
+                </form>
             </div>
 
             <!--Events Contain Fields: ID (auto), name, date (string)-->
