Almost fixed add event button, got name, location, and date fields working

--- a/public/admin.html
+++ b/public/admin.html
@@ -68,12 +68,12 @@
             <!--Events Contain Fields: ID (auto), name, date (string)-->
             <div>
                 <h3>Add Events</h3>
-                <form action="" method="" id="add-new-event">
-                    <input type="text" id="add-name" placeholder="Event Name">
-                    <input type="text" id="add-date" placeholder="Event Date">
-                    <input type="text" id="add-time" placeholder="Event Time">
-                    <input type="text" id="add-location" placeholder="Event Location">
-                    <button type="submit" id="add-event">Add Event</button>
+                <form action="" method="" id="add-event">
+                    <input type="text" id="event-name" placeholder="Event Name">
+                    <input type="text" id="date" placeholder="Event Date">
+                    <input type="text" id="time" placeholder="Event Time">
+                    <input type="text" id="location" placeholder="Event Location">
+                    <button type="submit" id="add-event-btn">Add Event</button>
                 </form>
             </div>
             <div>
