Finished all admin button functionality

--- a/public/admin.html
+++ b/public/admin.html
@@ -82,7 +82,7 @@
                     <input type="text" id="update-event-id" placeholder="Event ID"> 
                     <input type="text" id="update-name" placeholder="Event Name">
                     <input type="text" id="update-date" placeholder="Event Date">
-                    <input type="text" id="update-time" placeholder="Event Time">
+                    <input type="text" id="update-hours" placeholder="Event Time">
                     <input type="text" id="update-location" placeholder="Event Location">
                     <button type="submit" id="update-event-btn">Update Event</button>
                 </form>
