Started working on dynamic events

--- a/public/index.html
+++ b/public/index.html
@@ -44,8 +44,8 @@
                 <img src="images/home1.jpg" alt="tacos" id="tacos">
             </div>
             <div id="events">
-                <h2>Events</h2>
-                <div class="event-info">
+                <h2 id = "EventTab">Events</h2>
+                <!--<div class="event-info">
                     <h3>
                         Taco Tuesdays at Downtown Plaza 
                         <button class="menuBtn" id="drop" onclick="displayText('event1')"><i class="fa-solid fa-caret-down"></i></button>
@@ -146,7 +146,7 @@
                             <li><span class="bold">Hours:</span> 6:00 PM - 11:00 PM</li>
                         </ul>
                     </div>
-                </div>
+                </div>!-->
             </div>
         </div>
     </body>
