Dynamic events finished, working on adding categories to menu items in admin

--- a/public/admin.html
+++ b/public/admin.html
@@ -38,12 +38,12 @@
                     <input type="text" id="menu-item" placeholder="Menu Item">
                     <input type="text" id="description" placeholder="Item Description">
                     <input type="text" id="price" placeholder="Item Price">
-                    <!-- <select name="category" id="category">
+                    <select name="category" id="category">
                         <option value="" disabled>Select a Category</option>
-                        <option value="entree">entree</option>
-                        <option value="side">side</option>
-                        <option value="drink">drink</option>
-                    </select> -->
+                        <option value="Entree">Entree</option>
+                        <option value="SidesnSweets">SidesnSweets</option>
+                        <option value="Drinks">Drinks</option>
+                    </select>
                     <button type="submit" id="add-menu">Add Item</button>
                 </form>
             </div>
@@ -54,6 +54,12 @@
                     <input type="text" id="update-item" placeholder="Item Name">
                     <input type="text" id="update-description" placeholder="Item Description">
                     <input type="text" id="update-price" placeholder="Item Price">
+                    <select name="update-category" id="update-category">
+                        <option value="" disabled>Select a Category</option>
+                        <option value="Entree">Entree</option>
+                        <option value="SidesnSweets">SidesnSweets</option>
+                        <option value="Drinks">Drinks</option>
+                    </select>
                     <button type="submit" id="update-item-btn">Update Item</button>
                 </form>
             </div>
