--- a/public/index.html
+++ b/public/index.html
@@ -45,8 +45,8 @@
             </div>
             <div id="events">
                 <h2 id = "EventTab">Events</h2>
-                <!--<div class="event-info">
-                    <h3>
+                <div class="event-info">
+                    <!--<h3>
                         Taco Tuesdays at Downtown Plaza 
                         <button class="menuBtn" id="drop" onclick="displayText('event1')"><i class="fa-solid fa-caret-down"></i></button>
                         <button class="menuBtn" id="hide" onclick="hideText('event1')"><i class="fa-solid fa-caret-up"></i></button>
