Added extra fields, need to rework dynamic events slightly

--- a/public/admin.html
+++ b/public/admin.html
@@ -44,6 +44,7 @@
                         <option value="SidesnSweets">SidesnSweets</option>
                         <option value="Drinks">Drinks</option>
                     </select>
+                
                     <button type="submit" id="add-menu">Add Item</button>
                 </form>
             </div>
@@ -79,6 +80,7 @@
                     <input type="text" id="date" placeholder="Event Date">
                     <input type="text" id="time" placeholder="Event Time">
                     <input type="text" id="location" placeholder="Event Location">
+                    <input type="text" id="event-description" placeholder="Event Description">
                     <button type="submit" id="add-event-btn">Add Event</button>
                 </form>
             </div>
@@ -90,6 +92,7 @@
                     <input type="text" id="update-date" placeholder="Event Date">
                     <input type="text" id="update-hours" placeholder="Event Time">
                     <input type="text" id="update-location" placeholder="Event Location">
+                    <input type="text" id="update-event-description" placeholder="Event Description">
                     <button type="submit" id="update-event-btn">Update Event</button>
                 </form>
             </div>
