--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <link rel="stylesheet" href="styles/style.css">
         <link rel="stylesheet" href="styles/home.css">
-        <script src="site.js" defer></script>
+        <script src="site/site.js" defer></script>
 
         <!-- connecting to font sources -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
