Laid base for dynamic menu

--- a/public/menu.html
+++ b/public/menu.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <link rel="stylesheet" href="styles/style.css">
         <link rel="stylesheet" href="styles/menu.css">
-        <script src="site.js" defer></script>
+        <script src="site/menusite.js" defer></script>
 
         <!-- connecting to font sources -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -33,6 +33,22 @@
         <div id="wrapper">
             <h1>Our Menu</h1>
             <div id="entrees">
+                <h3>
+                    Entrees
+                </h3>
+                <!-- JavaScript will fill in here -->
+            </div>
+            <div id = "sidesnsweets">
+                <h3>
+                    Sides N' Sweets
+                </h3>
+                <!-- JavaScript will fill in here -->
+            </div>
+            <div id = "drinks">
+                <h3>
+                    Drinks
+                <!-- JavaScript will fill in here -->
+                </h3>
             </div>
         </div>
     </body>
